# Vectora

./: .gitignore  CMakeLists.txt
Sandbox/: FlappyBird.cpp  main.cpp
Vectora-ScriptCore/: CMakeLists.txt
Vectora-ScriptCore/Source/: KeyCodes.cs  Player.cs  main.cs
Vectora_Editor/: EditorLayer.cpp  EditorLayer.hpp  FlappyBird.cpp  FlappyBird.hpp  SandboxApp2D.cpp  SandboxApp2D.h  main.cpp
Vectora_Editor/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHirearchyPanel.cpp  SceneHirearchyPanel.h
Vectora_Engine/: Application.cpp  Application.h  Core.h  Input.h  LayerStack.cpp  Log.h  Vectora.h  vpch.h
Vectora_Engine/Core/: Application.cpp  Application.h  Assert.h  Core.h  DiscordManager.cpp  DiscordManager.h  EntryPoint.h  Input.cpp  Input.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  PlatformDetection.h  Window.cpp  Window.h
Vectora_Engine/Debug/: Instrumentor.h
Vectora_Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Vectora_Engine/Renderer/: Buffer.cpp  Buffer.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  OrthographiCamera.cpp  OrthographiCamera.h  OrthographicCameraController.cpp  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.h  Shader.cpp  Shader.h  Texture.h  VertexArray.cpp  VertexArray.h
Vectora_Engine/Scene/: Components.h  Entity.h  Scene.cpp  Scene.hpp  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h
Vectora_Engine/Scripting/: ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h
(+12 files in other folders)
